Fixed TypeScript error related to react-hook-form

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
   },
   "include": [
     "src",
-    "prettier.config.cjs"
+    "prettier.config.cjs",
+    "node_modules/react-hook-form/**/*" 
   ],
   "references": [
     {
